Nov 22, 2019
  -for non-rat species: qc checks relaxed and new genes are loaded regardless if sequences are present or not
       also no sequence checking is performed, so sequences are always updated
  -improved handling of records where species name is different than specified on the command line
  -eUtils queries download all genes, not only the ones with sequences

Nov 12, 2019
  -fixed spring IOT code (no longer displaying two 'null' lines when the pipeline is starting)

Oct 24, 2019
  -discontinued use of rgd-pipelines library
  -replaced commons logging with log4j

Sep 12, 2019
  -added support for mouse assembly GRCm38.p6 and human assembly GRCh38.p13

May 10, 2019 - v.3.8.2
  -gene association loader: rewritten for simpler code and much better performance in highly parallel environment

May 3, 2019 - v.3.8.1
  -in nomenclature events PREVIOUS_SYMBOL and PREVIOUS_NAME are now always set
  
Feb 25, 2019 - v.3.8.0
  -updated to dbcp2

Feb 11, 2019 - v.3.7.9
  -moved BulkGeneMerger and NcbiGeneHistoryLoader into ncbi-gene-pipeline project

Jan 29, 2019 - v.3.7.8
  -added handling of PIG

Sep 28, 2018 - v.3.7.7
  -moved from subversion to github

Aug 8, 2018 - v.3.7.6
  -added GRCh38.p12 to list of primary reference assemblies for human
  -added removal of transcripts that becoame obsolete during assembly upgrade
   note: the obsolete transcripts are not dropped if on the new assembly there are no transcripts!

Jan 24, 2018 - v.3.7.5
-tuned up run_all.sh: no longer need to email list of secondary genes, because they are now handled
 weekly by code update in v.3.7.4

Dec 13, 2017 - v.3.7.4
-added handling of NCBI withdrawn/secondary genes based on gene_history.gz file from NCBI

Dec 12, 2017 - v.3.7.3
-moved code for generating annotations for chinchilla to TransitiveAnnotPipeline

Dec 11, 2017 - v.3.7.2
-fixed handling of gene associations for all species

Nov 16, 2017 - v.3.7.1